Added Author collections and routes
